--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 body {
     margin: 0;
     height: 0;
+    font-family: Roboto,sans-serif;
     overflow-x: hidden;
     background-color: rgb(242, 242, 242);
+    font-size: 14px;
 }
 
 a {
@@ -45,12 +47,15 @@ a {
 
 #logo-section,
 #auth-section {
-    width: 11%;
+    width: 12%;
+}
+
+#logo-section{
+    margin-top: 5px;
 }
 
 #search-section {
-    width: 75%;
-    padding: 0 0.8%;
+    width: 72%;
 }
 
 #logo-section {
@@ -94,7 +99,7 @@ a {
 }
 
 #search-box i {
-    width: 2%;
+    width: 3%;
 }
 
 #search-box input {
@@ -106,15 +111,18 @@ a {
 
 /*Image Slider CSS Start*/
 .slider {
+    background-color: white;
     position: relative;
     width: 5142px;
     height: 35vh;
+    margin: 10px 0;
     /*animation: img-slider;*/
     /*animation-duration: 20s;*/
     /*animation-iteration-count: infinite;*/
 }
 
 .slider img {
+    border-radius: 10px;
     float: left;
     width: 15%;
     height: auto;
@@ -203,3 +211,6 @@ a {
     width: 100%;
     height: auto;
 }
+
+
+/*Footer CSS*/
