--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     height: 0;
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     overflow-x: hidden;
     background-color: rgb(242, 242, 242);
     font-size: 14px;
@@ -13,7 +13,7 @@ a {
 
 .btn {
     border: none;
-    padding: 5%;
+    padding: 4%;
     margin: 5%;
     border-radius: 5px;
 }
@@ -32,7 +32,12 @@ a {
     color: white;
 }
 
+/* Primary Header CSS start*/
 #primary-header {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     margin: 0;
     padding-top: 10px;
     background-color: #333545;
@@ -50,12 +55,12 @@ a {
     width: 12%;
 }
 
-#logo-section{
+#logo-section {
     margin-top: 5px;
 }
 
 #search-section {
-    width: 72%;
+    width: 75%;
 }
 
 #logo-section {
@@ -96,6 +101,7 @@ a {
 #navbar-right a {
     color: rgba(255, 255, 255, .5);
     padding: 0 1%;
+    font-size: 13px;
 }
 
 #search-box i {
@@ -109,6 +115,103 @@ a {
     padding-left: 1%;
 }
 
+/* Primary Header CSS ends*/
+
+/* Aside and Overlay CSS start*/
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#user-menu {
+    display: none;
+    background-color: white;
+    position: absolute;
+    width: 25%;
+    height: 100vh;
+    right: 0;
+    z-index: 3;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+#menu-heading {
+    padding: 10%;
+    width: 100%;
+    background-color: #333545;
+    color: white;
+}
+
+#menu-heading h4 {
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+}
+
+#menu-heading > div {
+    display: inline-block;
+}
+
+#heading-left {
+    width: 10%;
+    margin: auto 2%;
+}
+
+#heading-left p {
+    border-radius: 25px;
+    padding: 15%;
+    margin: auto 2%;
+    border: 1px solid dodgerblue;
+}
+
+#heading-right {
+    margin: auto 2%;
+}
+
+#heading-right h4 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+}
+
+#heading-right p {
+    margin: 0;
+    padding: 0;
+}
+
+#user-menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#user-menu ul li {
+    width: 100%;
+}
+
+#user-menu ul li a {
+    display: block;
+    width: 100%;
+    padding: 6%;
+    color: #666;
+    font-size: 12px;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+#user-menu ul li a:hover {
+    background-color: #D5D8DC;
+}
+
+/* User Menu CSS start*/
+
 /*Image Slider CSS Start*/
 .slider {
     background-color: white;
@@ -116,9 +219,6 @@ a {
     width: 5142px;
     height: 35vh;
     margin: 10px 0;
-    /*animation: img-slider;*/
-    /*animation-duration: 20s;*/
-    /*animation-iteration-count: infinite;*/
 }
 
 .slider img {
@@ -129,23 +229,7 @@ a {
     padding: 5px 0 5px 5px;
 }
 
-/*@keyframes img-slider {*/
-/*0% {*/
-/*left: 0;*/
-/*}*/
-/*20% {*/
-/*left: -1280px;*/
-/*}*/
-/*40% {*/
-/*left: -2560px;*/
-/*}*/
-/*60% {*/
-/*left: -5142px;*/
-/*}*/
-/*}*/
-
 /*Content  CSS Starts*/
-
 #content {
     width: 100%;
     display: flex;
@@ -177,8 +261,7 @@ a {
     margin-bottom: 1px;
 }
 
-
-.movie-widget-card{
+.movie-widget-card {
     border-radius: 8px;
     width: 80%;
     height: auto;
@@ -190,21 +273,24 @@ a {
     width: 100%;
 }
 
-.movie-widget-card .movie-widget-card-footer{
+.movie-widget-card .movie-widget-card-footer {
     padding: 10px;
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    background-color: white ;
+    background-color: white;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-
 .movie-widget-card .movie-widget-card-footer h4,
-.movie-widget-card .movie-widget-card-footer p{
+.movie-widget-card .movie-widget-card-footer p {
     margin: 0 10%;
     font-size: 14px;
+}
+
+.movie-widget-card .movie-widget-card-footer i {
+    color: red;
 }
 
 .movie-widget-card img {
@@ -212,5 +298,27 @@ a {
     height: auto;
 }
 
-
 /*Footer CSS*/
+
+/* Media Queries */
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (max-width: 576px) {
+
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (max-width: 768px) {
+
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (max-width: 1200px) {
+    #primary-nav{
+        display: none;
+    }
+
+    #logo-section{
+
+    }
+}
