--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     height: 0;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     font-family: Roboto, sans-serif;
     background-color: rgb(242, 242, 242);
     font-size: 14px;
@@ -135,7 +135,6 @@ a {
 
 /* Primary Header CSS ends*/
 
-
 /* Aside and Overlay CSS start*/
 
 #overlay {
@@ -229,8 +228,8 @@ a {
 #user-menu ul li a:hover {
     background-color: #D5D8DC;
 }
-/* User Menu CSS ends*/
 
+/* User Menu CSS ends*/
 
 /*Image Slider CSS Start*/
 .slider {
@@ -238,15 +237,36 @@ a {
     position: relative;
     width: 400%;
     height: 40%;
-    margin: 10px 0;
+    /*margin: 10px 0;*/
+    animation-name: bookmyshow;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
 }
 
 .slider img {
-    border-radius: 10px;
+    /*border-radius: 10px;*/
     float: left;
-    width: 15%;
+    width: 25%;
     height: auto;
-    padding: 5px 0 5px 5px;
+    padding: 0;
+}
+
+@keyframes bookmyshow {
+    0% {
+        left: 0;
+    }
+    20% {
+        left: -100%;
+    }
+    40% {
+        left: -200%;
+    }
+    60% {
+        left: -300%;
+    }
+    100% {
+        left: 0;
+    }
 }
 
 /*Content  CSS Starts*/
@@ -327,9 +347,9 @@ a {
 
 /* Media Queries Desktop Approach */
 
- @media (min-width: 793px) and (max-width: 1200px) {
+@media (min-width: 793px) and (max-width: 1200px) {
     #primary-nav {
-        display: none!important;
+        display: none !important;
     }
 }
 
@@ -403,11 +423,11 @@ a {
         margin: 0 5%;
     }
 
-    #user-menu{
+    #user-menu {
         width: 75%;
     }
 
-    .slider{
+    .slider {
         margin: 0;
     }
 }
